--- a/test.html
+++ b/test.html
@@ -19,7 +19,7 @@
   <body>
     <div id="ar-container">
       <a-scene 
-        mindar-image="imageTargetSrc: ../A.llaveros/Frieren/targets.mind; filterMinCF: 0.05; filterBeta: 5; warmupTolerance: 1; missTolerance: 1;" 
+        mindar-image="imageTargetSrc: A.llaveros/targets.mind; filterMinCF: 0.05; filterBeta: 5; warmupTolerance: 1; missTolerance: 1;" 
         color-space="sRGB"
         embedded
         renderer="colorManagement: true, physicallyCorrectLights"
@@ -28,28 +28,21 @@
       >
         <a-assets>
           <!-- Cargamos los frames de la animación -->
-          <img id="frame0" src="../A.llaveros/Frieren/Frieren-1.png" crossorigin="anonymous" />
-          <img id="frame1" src="../A.llaveros/Frieren/Frieren-2.png" crossorigin="anonymous" />
-          <img id="frame2" src="../A.llaveros/Frieren/Frieren-3.png" crossorigin="anonymous" />
-          <img id="frame3" src="../A.llaveros/Frieren/Frieren-4.png" crossorigin="anonymous" />
-          <img id="frame4" src="../A.llaveros/Frieren/Frieren-5.png" crossorigin="anonymous" />
-          <img id="frame5" src="../A.llaveros/Frieren/Frieren-6.png" crossorigin="anonymous" />
-          <img id="frame6" src="../A.llaveros/Frieren/Frieren-7.png" crossorigin="anonymous" />
-          <img id="frame7" src="../A.llaveros/Frieren/Frieren-8.png" crossorigin="anonymous" />
-          <img id="frame8" src="../A.llaveros/Frieren/Frieren-9.png" crossorigin="anonymous" />
+          <img id="frame0" src="A.llaveros/Frieren/Frieren-1.png" crossorigin="anonymous" />
+          <img id="frame1" src="A.llaveros/Frieren/Frieren-2.png" crossorigin="anonymous" />
+          <img id="frame2" src="A.llaveros/Frieren/Frieren-3.png" crossorigin="anonymous" />
+          <img id="frame3" src="A.llaveros/Frieren/Frieren-4.png" crossorigin="anonymous" />
+          <img id="frame4" src="A.llaveros/Frieren/Frieren-5.png" crossorigin="anonymous" />
+          <img id="frame5" src="A.llaveros/Frieren/Frieren-6.png" crossorigin="anonymous" />
+          <img id="frame6" src="A.llaveros/Frieren/Frieren-7.png" crossorigin="anonymous" />
+          <img id="frame7" src="A.llaveros/Frieren/Frieren-8.png" crossorigin="anonymous" />
+          <img id="frame8" src="A.llaveros/Frieren/Frieren-9.png" crossorigin="anonymous" />
         </a-assets>
 
         <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
 
         <a-entity mindar-image-target="targetIndex: 0" id="target">
-          <a-image
-            id="anim-image"
-            src="#frame0"
-            position="0 0 0"
-            width="1"
-            height="1"
-            frame-animation
-          ></a-image>
+          <a-plane color="blue" opaciy="0.5" position="0 0 0" height="0.552" width="1" rotation="0 0 0"></a-plane>
         </a-entity>
 
         <!-- Script para animar los frames -->
@@ -57,11 +50,9 @@
           AFRAME.registerComponent('frame-animation', {
             init: function () {
               const image = this.el;
-              // AFEGIR FRAMES IMPORTANT
               const frames = [
                 '#frame0', '#frame1', '#frame2',
-                '#frame3', '#frame4', '#frame5',
-                '#frame6', '#frame7', '#frame8'
+                '#frame3', '#frame4', '#frame5', '#frame6'
               ];
               let current = 0;
               this.interval = setInterval(() => {
@@ -77,10 +68,12 @@
           // Ocultar loader cuando se detecte el target
           document.addEventListener("DOMContentLoaded", () => {
             const target = document.querySelector("#target");
+            
             target.addEventListener("targetFound", () => {
+              console.log("Entra!")
               const loader = document.querySelector("mindar-ui-loading");
-              if (loader) loader.style.display = "none";
-              console.log("Target found!")
+              if (loader) loader.style.display = "none" ; 
+              
             });
           });
         </script>
