Goku le gana mes cambios

--- a/Llaveros.html
+++ b/Llaveros.html
@@ -21,9 +21,9 @@
 						<div class="inner">
 
 							<!-- Logo -->
-								<p class="logo">
-									<span class="symbol"><img src="images/Logo_Inkbits.png" alt="" /></span><span class="title">| Llaveros</span>
-								</p>
+								<a href="index.html" class="logo">
+									<span class="symbol"><img src="images/Logo_Inkbits.png" alt="" /></span><span class="title">| KEYCHAINS</span>
+								</a>
 						</div>
 					</header>
 
@@ -33,9 +33,7 @@
 						<ul>
 							<li><a href="index.html">Home</a></li>
 							<li><a href="Llaveros.html">Keychains</a></li>
-							<li><a href="Pegatinas.html">Pegatinas</a></li>
-							<li><a href="generic.html">Otros</a></li>
-							<li><a href="elements.html">Otros 1</a></li>
+							<li><a href="Pegatinas.html">Stickers</a></li>
 						</ul>
 					</nav>
 
@@ -43,22 +41,23 @@
 					<div id="main">
 						<div class="inner">
 							<header>
-								<h1> Titulo para poner cosas</h1>
-								<p>Subtitulo</p>
+								<p>Filter for the keychains!</p>
 							</header>
 							<div class="filter-bar" style="margin-bottom:20px;">
-                                <label for="filter">Filter by:</label>
+                                <label for="filter">Filter by group:</label>
                                 <select id="filter">
                                     <option value="all">All</option>
+									<option value="anime">Anime</option>
+									<option value="videogames">Videogames</option>
                                     <option value="one piece">One Piece</option>
                                     <option value="pokemon">Pokemon</option>
                                     <option value="winx club">Winx Club</option>
                                 </select>
 							</div>
 							<section class="tiles">
-								<article class="style1" data-tag="pokemon">
+								<article class="style2" data-tags="pokemon videogames">
 									<span class="image">
-										<img src="A.llaveros/Eevee/Eevee-1.png"/>
+										<img src="images/Eevee.png"/>
 									</span>
 									<a href="Web-Llaveros/eevee.html">
 										<h2>Eevee</h2>
@@ -69,7 +68,7 @@
 								</article>
 								<article class="style2">
 									<span class="image">
-										<img src="images/pic02.jpg" alt="" />
+										<img src="images/Frieren.png" alt="" />
 									</span>
 									<a href="Web-Llaveros/frieren.html">
 										<h2>Frieren</h2>
@@ -78,116 +77,18 @@
 										</div>
 									</a>
 								</article>
-								<article class="style3">
-									<span class="image">
-										<img src="images/pic03.jpg" alt="" />
-									</span>
-									<a href="generic.html">
-										<h2>Feugiat</h2>
-										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
-										</div>
-									</a>
-								</article>
-								<article class="style4">
-									<span class="image">
-										<img src="images/pic04.jpg" alt="" />
-									</span>
-									<a href="generic.html">
-										<h2>Tempus</h2>
-										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
-										</div>
-									</a>
-								</article>
-								<article class="style5">
-									<span class="image">
-										<img src="images/pic05.jpg" alt="" />
-									</span>
-									<a href="generic.html">
-										<h2>Aliquam</h2>
-										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
-										</div>
-									</a>
-								</article>
-								<article class="style6">
-									<span class="image">
-										<img src="images/pic06.jpg" alt="" />
-									</span>
-									<a href="generic.html">
-										<h2>Veroeros</h2>
-										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
-										</div>
-									</a>
-								</article>
 								<article class="style2">
 									<span class="image">
-										<img src="images/pic07.jpg" alt="" />
+										<img src="images/Goku.png" alt="" />
 									</span>
-									<a href="generic.html">
-										<h2>Ipsum</h2>
+									<a href="Web-Llaveros/goku.html">
+										<h2>Goku</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p></p>
 										</div>
 									</a>
 								</article>
-								<article class="style3">
-									<span class="image">
-										<img src="images/pic08.jpg" alt="" />
-									</span>
-									<a href="generic.html">
-										<h2>Dolor</h2>
-										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
-										</div>
-									</a>
-								</article>
-								<article class="style1">
-									<span class="image">
-										<img src="images/pic09.jpg" alt="" />
-									</span>
-									<a href="generic.html">
-										<h2>Nullam</h2>
-										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
-										</div>
-									</a>
-								</article>
-								<article class="style5">
-									<span class="image">
-										<img src="images/pic10.jpg" alt="" />
-									</span>
-									<a href="generic.html">
-										<h2>Ultricies</h2>
-										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
-										</div>
-									</a>
-								</article>
-								<article class="style6">
-									<span class="image">
-										<img src="images/pic11.jpg" alt="" />
-									</span>
-									<a href="generic.html">
-										<h2>Dictum</h2>
-										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
-										</div>
-									</a>
-								</article>
-								<article class="style4">
-									<span class="image">
-										<img src="images/pic12.jpg" alt="" />
-									</span>
-									<a href="generic.html">
-										<h2>Pretium</h2>
-										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
-										</div>
-									</a>
-								</article>
+
 							</section>
 						</div>
 					</div>
@@ -242,19 +143,33 @@
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
 			<script>
- 				 document.getElementById("filter").addEventListener("change", function() {
-   				 const value = this.value.toLowerCase();
-   				 const tiles = document.querySelectorAll(".tiles article");
+			document.addEventListener('DOMContentLoaded', function () {
+			const filterEl = document.getElementById('filter');
+			if (!filterEl) {
+				console.warn('Filter element (#filter) not found.');
+				return;
+			}
 
-    			tiles.forEach(tile => {
-      				const tag = tile.getAttribute("data-tag");
-      				if (value === "all" || (tag && tag.toLowerCase() === value)) {
-       					 tile.style.display = "block";
-     			 } else {
-        				tile.style.display = "none";
-      				}
-   				 });
- 				 });
+			function applyFilter() {
+				const value = filterEl.value.trim().toLowerCase();
+				const tiles = document.querySelectorAll('.tiles article');
+
+				tiles.forEach(tile => {
+				const raw = tile.getAttribute('data-tags') || tile.getAttribute('data-tag') || '';
+				const tags = raw.toLowerCase().split(/\s*,\s*|\s+/).filter(Boolean);
+
+				
+				if (value === 'all' || tags.includes(value)) {
+					tile.style.display = '';   
+				} else {
+					tile.style.display = 'none';
+				}
+				});
+			}
+
+			filterEl.addEventListener('change', applyFilter);
+			applyFilter();
+			});
 			</script>
 	</body>
 </html>
