--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 						<div class="inner">
 
 							<!-- Logo -->
-								<a href="index.html" class="logo">
-									<span class="symbol"><img src="images/Logo_Inkbits.png" alt="" /></span><span class="title">INK BITS</span>
-								</a>
+								<p class="logo">
+									<span class="symbol"><img src="images/Logo_Inkbits.png" alt="" /></span><span class="title">| INK BITS</span>
+								</p>
 
 							<!-- Nav -->
 								<nav>
@@ -36,9 +36,7 @@
 						<ul>
 							<li><a href="index.html">Home</a></li>
 							<li><a href="Llaveros.html">Keychains</a></li>
-							<li><a href="Pegatinas.html">Pegatinas</a></li>
-							<li><a href="generic.html">Otros</a></li>
-							<li><a href="elements.html">Otros 1</a></li>
+							<li><a href="Pegatinas.html">Stickers</a></li>
 						</ul>
 					</nav>
 
@@ -52,35 +50,20 @@
 							<section class="tiles">
 								<article class="style1">
 									<span class="image">
-										<img src="images/pic01.jpg" alt="" />
+										<img src="images/llaveros_back.png" alt="" />
 									</span>
 									<a href="Llaveros.html">
-										<h2>Llaveros</h2>
-										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
-										</div>
+										<h2>Keychains</h2>
 									</a>
 								</article>
-								<article class="style2">
+								<article class="style1">
 									<span class="image">
-										<img src="images/pic02.jpg" alt="" />
+										<img src="images/pegatinas_back.png" alt="" />
 									</span>
 									<a href="Pegatinas.html">
-										<h2>Pegatinas</h2>
-										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
-										</div>
+										<h2>Stickers</h2>
 									</a>
 								</article>
-								<article class="style3">
-									<span class="image">
-										<img src="images/pic03.jpg" alt="" />
-									</span>
-									<a href="generic.html">
-										<h2>Feugiat</h2>
-										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
-										</div>
 							</section>
 						</div>
 					</div>
