--- a/Llaveros.html
+++ b/Llaveros.html
@@ -55,7 +55,7 @@
                                 </select>
 							</div>
 							<section class="tiles">
-								<article class="style2" data-tags="pokemon videogames">
+								<article class="style2" data-tags="pokemon videogames anime">
 									<span class="image">
 										<img src="images/Eevee.png"/>
 									</span>
@@ -66,7 +66,7 @@
 										</div>
 									</a>
 								</article>
-								<article class="style2">
+								<article class="style2" data-tags="anime">
 									<span class="image">
 										<img src="images/Frieren.png" alt="" />
 									</span>
@@ -77,7 +77,7 @@
 										</div>
 									</a>
 								</article>
-								<article class="style2">
+								<article class="style2" data-tags="anime">
 									<span class="image">
 										<img src="images/Goku.png" alt="" />
 									</span>
