--- a/Web-Llaveros/frieren.html
+++ b/Web-Llaveros/frieren.html
@@ -46,9 +46,11 @@
             id="anim-image"
             src="#frame0"
             position="0 0 0"
-            width="2"
+            width="1"
             height="1"
             frame-animation
+            animation__enlarge="property: scale; to: 1.2 1.2 1.2; dur: 300; startEvents: enlarge"
+            animation__shrink="property: scale; to: 1 1 1; dur: 300; startEvents: shrink"
           ></a-image>
         </a-entity>
 
@@ -81,6 +83,24 @@
               const loader = document.querySelector("mindar-ui-loading");
               if (loader) loader.style.display = "none";
               console.log("Target found!")
+            });
+          });
+        </script>
+        <script>
+          document.addEventListener("DOMContentLoaded", () => {
+            const target = document.querySelector("#target");
+            const img = document.querySelector("#anim-image");
+            if (!target || !img) return;
+
+            // If your image had a different initial scale, you'll want to calculate the proper "to" values.
+            // This example assumes initial scale is 1 1 1.
+
+            target.addEventListener('targetFound', () => {
+              img.emit('enlarge'); // runs the animation__enlarge
+            });
+
+            target.addEventListener('targetLost', () => {
+              img.emit('shrink');  // runs the animation__shrink
             });
           });
         </script>
