--- a/Llaveros.html
+++ b/Llaveros.html
@@ -49,9 +49,7 @@
                                     <option value="all">All</option>
 									<option value="anime">Anime</option>
 									<option value="videogames">Videogames</option>
-                                    <option value="one piece">One Piece</option>
-                                    <option value="pokemon">Pokemon</option>
-                                    <option value="winx club">Winx Club</option>
+                                    <option value="other">Other</option>
                                 </select>
 							</div>
 							<section class="tiles">
@@ -88,7 +86,17 @@
 										</div>
 									</a>
 								</article>
-
+								<article class="style2" data-tags="other">
+									<span class="image">
+										<img src="images/Gura.png" alt="" />
+									</span>
+									<a href="Web-Llaveros/gura.html">
+										<h2>Gura</h2>
+										<div class="content">
+											<p></p>
+										</div>
+									</a>
+								</article>
 							</section>
 						</div>
 					</div>
