--- a/Llaveros.html
+++ b/Llaveros.html
@@ -58,7 +58,7 @@
 										<img src="images/Eevee.png"/>
 									</span>
 									<a href="Web-Llaveros/eevee.html">
-										<h2>Eevee</h2>
+										<h2>Eeveee</h2>
 										<div class="content">
 											<p></p>
 										</div>
