--- a/Llaveros.html
+++ b/Llaveros.html
@@ -41,7 +41,7 @@
 					<div id="main">
 						<div class="inner">
 							<header>
-								<p>Filter for the keychains!</p>
+								<p>Filter fosr the keychains!</p>
 							</header>
 							<div class="filter-bar" style="margin-bottom:20px;">
                                 <label for="filter">Filter by group:</label>
