--- a/Web-Llaveros/goku.html
+++ b/Web-Llaveros/goku.html
@@ -37,7 +37,7 @@
           <img id="frame6" src="../A.llaveros/Goku/Goku-7.png" crossorigin="anonymous" />
         </a-assets>
 
-        <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
+        <a-camera position="0 0.015 0" look-controls="enabled: false"></a-camera>
 
         <a-entity mindar-image-target="targetIndex: 0" id="target">
           <a-image
@@ -47,6 +47,8 @@
             width="1"
             height="1"
             frame-animation
+            animation__enlarge="property: scale; to: 1.2 1.2 1.2; dur: 300; startEvents: enlarge"
+            animation__shrink="property: scale; to: 1 1 1; dur: 300; startEvents: shrink"
           ></a-image>
         </a-entity>
 
@@ -89,11 +91,11 @@
             if (!target || !img) return;
 
             target.addEventListener('targetFound', () => {
-              //img.emit('enlarge');
+              img.emit('enlarge');
             });
 
             target.addEventListener('targetLost', () => {
-              //img.emit('shrink'); 
+              img.emit('shrink'); 
             });
           });
         </script>
