--- a/Llaveros.html
+++ b/Llaveros.html
@@ -284,6 +284,105 @@
 										</div>
 									</a>
 								</article>
+								<article class="style2" data-tags="anime">
+									<span class="image">
+										<img src="images/Pochita.png" alt="" />
+									</span>
+									<a href="Web-Llaveros/pochita.html">
+										<h2>Pochita</h2>
+										<div class="content">
+											<p></p>
+										</div>
+									</a>
+								</article>
+								<article class="style2" data-tags="videogames">
+									<span class="image">
+										<img src="images/Ranni.png" alt="" />
+									</span>
+									<a href="Web-Llaveros/ranni.html">
+										<h2>Ranni</h2>
+										<div class="content">
+											<p></p>
+										</div>
+									</a>
+								</article>
+								<article class="style2" data-tags="anime">
+									<span class="image">
+										<img src="images/Sailor Moon.png" alt="" />
+									</span>
+									<a href="Web-Llaveros/sailormoon.html">
+										<h2>Sailor Moon</h2>
+										<div class="content">
+											<p></p>
+										</div>
+									</a>
+								</article>
+								<article class="style2" data-tags="videogames">
+									<span class="image">
+										<img src="images/Samus.png" alt="" />
+									</span>
+									<a href="Web-Llaveros/samus.html">
+										<h2>Samus</h2>
+										<div class="content">
+											<p></p>
+										</div>
+									</a>
+								</article>
+								<article class="style2" data-tags="anime">
+									<span class="image">
+										<img src="images/San.png" alt="" />
+									</span>
+									<a href="Web-Llaveros/san.html">
+										<h2>San</h2>
+										<div class="content">
+											<p></p>
+										</div>
+									</a>
+								</article>							
+								<article class="style2" data-tags="anime">
+									<span class="image">
+										<img src="images/Sensh.png" alt="" />
+									</span>
+									<a href="Web-Llaveros/senshi.html">
+										<h2>Senshi</h2>
+										<div class="content">
+											<p></p>
+										</div>
+									</a>
+								</article>
+								<article class="style2" data-tags="videogames">
+									<span class="image">
+										<img src="images/SONIC.png" alt="" />
+									</span>
+									<a href="Web-Llaveros/sonic.html">
+										<h2>Sonic</h2>
+										<div class="content">
+											<p></p>
+										</div>
+									</a>
+								</article>
+								<article class="style2" data-tags="other">
+									<span class="image">
+										<img src="images/Spidey.png" alt="" />
+									</span>
+									<a href="Web-Llaveros/spiderman.html">
+										<h2>Spiderman</h2>
+										<div class="content">
+											<p></p>
+										</div>
+									</a>
+								</article>
+								<article class="style2" data-tags="videogames">
+									<span class="image">
+										<img src="images/Zelda.png" alt="" />
+									</span>
+									<a href="Web-Llaveros/zelda.html">
+										<h2>Zelda</h2>
+										<div class="content">
+											<p></p>
+										</div>
+									</a>
+								</article>
 							</section>
 						</div>
 					</div>
