--- a/Web-Llaveros/omori.html
+++ b/Web-Llaveros/omori.html
@@ -19,7 +19,7 @@
   <body>
     <div id="ar-container">
       <a-scene 
-        mindar-image="imageTargetSrc: ../A.llaveros/Ness/targets.mind; filterMinCF: 0.001; filterBeta: 100; warmupTolerance: 0.1; missTolerance: 1;" 
+        mindar-image="imageTargetSrc: ../A.llaveros/Omori/targets.mind; filterMinCF: 0.005; filterBeta: 100; warmupTolerance: 1; missTolerance: 25;" 
         color-space="sRGB"
         embedded
         renderer="colorManagement: true, physicallyCorrectLights"
