--- a/Web-Llaveros/spiderman.html
+++ b/Web-Llaveros/spiderman.html
@@ -36,17 +36,17 @@
           <img id="frame5" src="../A.llaveros/SpiderMan/Peter_Parker-6.png" crossorigin="anonymous" />
         </a-assets>
 
-        <a-camera position="-0.05 0.2 0" look-controls="enabled: false"></a-camera>
+        <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
 
         <a-entity mindar-image-target="targetIndex: 0" id="target">
           <a-image
             id="anim-image"
             src="#frame0"
-            position="-0.05 0.2 0"
+            position="0 0 0"
             width="1"
-            height="1.35"
+            height="1"
             frame-animation
-            animation__enlarge="property: scale; to: 1.2 1.35 1.2; dur: 300; startEvents: enlarge"
+            animation__enlarge="property: scale; to: 1.2 1.2 1.2; dur: 300; startEvents: enlarge"
             animation__shrink="property: scale; to: 1 1 1; dur: 300; startEvents: shrink"
           ></a-image>
         </a-entity>
@@ -90,6 +90,7 @@
 
             target.addEventListener('targetFound', () => {
               img.emit('enlarge');
+              console.log("Target found!")
             });
 
             target.addEventListener('targetLost', () => {
