--- a/Web-Llaveros/link.html
+++ b/Web-Llaveros/link.html
@@ -19,7 +19,7 @@
   <body>
     <div id="ar-container">
       <a-scene 
-        mindar-image="imageTargetSrc: ../A.llaveros/Link/targets.mind; filterMinCF: 0.005; filterBeta: 10s; warmupTolerance: 1; missTolerance: 15;" 
+        mindar-image="imageTargetSrc: ../A.llaveros/Link/targets.mind; filterMinCF: 0.0001; filterBeta: 0.001; warmupTolerance: 1; missTolerance: 5;" 
         color-space="sRGB"
         embedded
         renderer="colorManagement: true, physicallyCorrectLights"
