--- a/Llaveros.html
+++ b/Llaveros.html
@@ -88,6 +88,17 @@
 								</article>
 								<article class="style2" data-tags="other">
 									<span class="image">
+										<img src="images/Goldship.png" alt="" />
+									</span>
+									<a href="Web-Llaveros/goldship.html">
+										<h2>Goldship</h2>
+										<div class="content">
+											<p></p>
+										</div>
+									</a>
+								</article>
+								<article class="style2" data-tags="other">
+									<span class="image">
 										<img src="images/Gura.png" alt="" />
 									</span>
 									<a href="Web-Llaveros/gura.html">
