a veure si canviant

--- a/Llaveros.html
+++ b/Llaveros.html
@@ -112,7 +112,7 @@
 									<span class="image">
 										<img src="images/Knight.png" alt="" />
 									</span>
-									<a href="Web-Llaveros/hollowknight.html">
+									<a href="Web-Llaveros/knight.html">
 										<h2>Hollow Knight</h2>
 										<div class="content">
 											<p></p>
