--- a/Llaveros.html
+++ b/Llaveros.html
@@ -394,7 +394,7 @@
 										</div>
 									</a>
 								</article>
-								<article class="style2" data-tags="other">
+								<article class="style2" data-tags="videogames other">
 									<span class="image">
 										<img src="images/Spidey.png" alt="" />
 									</span>
@@ -404,7 +404,7 @@
 											<p></p>
 										</div>
 									</a>
-								</article>
+								</article>						
 								<article class="style2" data-tags="videogames">
 									<span class="image">
 										<img src="images/Zelda.png" alt="" />
