--- a/Web-Llaveros/knight.html
+++ b/Web-Llaveros/knight.html
@@ -19,7 +19,7 @@
   <body>
     <div id="ar-container">
       <a-scene 
-        mindar-image="imageTargetSrc: ../A.llaveros/Knight/targets.mind; filterMinCF: 0.05; filterBeta: 5; warmupTolerance: 1; missTolerance: 1;" 
+        mindar-image="imageTargetSrc: ../A.llaveros/Knight/targets.mind; filterMinCF: 0.0001; filterBeta: 0.001; warmupTolerance: 1; missTolerance: 5;" 
         color-space="sRGB"
         embedded
         renderer="colorManagement: true, physicallyCorrectLights"
@@ -28,27 +28,26 @@
       >
         <a-assets>
           <!-- Cargamos los frames de la animación -->
-          <img id="frame0" src="../A.llaveros/Knight/Neko_Arc-1.png" crossorigin="anonymous" />
-          <img id="frame1" src="../A.llaveros/Knight/Neko_Arc-2.png" crossorigin="anonymous" />
-          <img id="frame2" src="../A.llaveros/Knight/Neko_Arc-3.png" crossorigin="anonymous" />
-          <img id="frame3" src="../A.llaveros/Knight/Neko_Arc-4.png" crossorigin="anonymous" />
-          <img id="frame4" src="../A.llaveros/Knight/Neko_Arc-5.png" crossorigin="anonymous" />
-          <img id="frame5" src="../A.llaveros/Knight/Neko_Arc-6.png" crossorigin="anonymous" />
-          <img id="frame6" src="../A.llaveros/Knight/Neko_Arc-7.png" crossorigin="anonymous" />
-          <img id="frame7" src="../A.llaveros/Knight/Neko_Arc-8.png" crossorigin="anonymous" />
+          <img id="frame0" src="../A.llaveros/Knight/Hollow-1.png" crossorigin="anonymous" />
+          <img id="frame1" src="../A.llaveros/Knight/Hollow-2.png" crossorigin="anonymous" />
+          <img id="frame2" src="../A.llaveros/Knight/Hollow-3.png" crossorigin="anonymous" />
+          <img id="frame3" src="../A.llaveros/Knight/Hollow-4.png" crossorigin="anonymous" />
+          <img id="frame4" src="../A.llaveros/Knight/Hollow-5.png" crossorigin="anonymous" />
+          <img id="frame5" src="../A.llaveros/Knight/Hollow-6.png" crossorigin="anonymous" />
+          <img id="frame6" src="../A.llaveros/Knight/Hollow-7.png" crossorigin="anonymous" />
         </a-assets>
 
-        <a-camera position="0.05 0.1 0" look-controls="enabled: false"></a-camera>
+        <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
 
         <a-entity mindar-image-target="targetIndex: 0" id="target">
           <a-image
             id="anim-image"
             src="#frame0"
-            position="0.05 0.1 0"
-            width="1.1"
-            height="1.1"
+            position="0 0 0"
+            width="1"
+            height="1"
             frame-animation
-            animation__enlarge="property: scale; to: 1.3 1.3 1.3; dur: 300; startEvents: enlarge"
+            animation__enlarge="property: scale; to: 1.2 1.2 1.2; dur: 300; startEvents: enlarge"
             animation__shrink="property: scale; to: 1 1 1; dur: 300; startEvents: shrink"
           ></a-image>
         </a-entity>
@@ -62,7 +61,7 @@
               const frames = [
                 '#frame0', '#frame1', '#frame2',
                 '#frame3', '#frame4', '#frame5',
-                '#frame6', '#frame7'
+                '#frame6'
               ];
               let current = 0;
               this.interval = setInterval(() => {
