--- a/Web-Llaveros/spiderman.html
+++ b/Web-Llaveros/spiderman.html
@@ -19,7 +19,7 @@
   <body>
     <div id="ar-container">
       <a-scene 
-        mindar-image="imageTargetSrc: ../A.llaveros/Spiderman/targets.mind; filterMinCF: 0.00001; filterBeta: 0.0001; warmupTolerance: 3; missTolerance: 15;" 
+        mindar-image="imageTargetSrc: ../A.llaveros/Spidey/targets.mind; filterMinCF: 0.00001; filterBeta: 0.0001; warmupTolerance: 3; missTolerance: 15;" 
         color-space="sRGB"
         embedded
         renderer="colorManagement: true, physicallyCorrectLights"
@@ -28,12 +28,12 @@
       >
         <a-assets>
           <!-- Cargamos los frames de la animación -->
-          <img id="frame0" src="../A.llaveros/Spiderman/Peter_Parker-1.png" crossorigin="anonymous" />
-          <img id="frame1" src="../A.llaveros/Spiderman/Peter_Parker-2.png" crossorigin="anonymous" />
-          <img id="frame2" src="../A.llaveros/Spiderman/Peter_Parker-3.png" crossorigin="anonymous" />
-          <img id="frame3" src="../A.llaveros/Spiderman/Peter_Parker-4.png" crossorigin="anonymous" />
-          <img id="frame4" src="../A.llaveros/Spiderman/Peter_Parker-5.png" crossorigin="anonymous" />
-          <img id="frame5" src="../A.llaveros/Spiderman/Peter_Parker-6.png" crossorigin="anonymous" />
+          <img id="frame0" src="../A.llaveros/Spidey/Peter_Parker-1.png" crossorigin="anonymous" />
+          <img id="frame1" src="../A.llaveros/Spidey/Peter_Parker-2.png" crossorigin="anonymous" />
+          <img id="frame2" src="../A.llaveros/Spidey/Peter_Parker-3.png" crossorigin="anonymous" />
+          <img id="frame3" src="../A.llaveros/Spidey/Peter_Parker-4.png" crossorigin="anonymous" />
+          <img id="frame4" src="../A.llaveros/Spidey/Peter_Parker-5.png" crossorigin="anonymous" />
+          <img id="frame5" src="../A.llaveros/Spidey/Peter_Parker-6.png" crossorigin="anonymous" />
         </a-assets>
 
         <a-camera position="0.1 0.2 0" look-controls="enabled: false"></a-camera>
