--- a/Llaveros.html
+++ b/Llaveros.html
@@ -60,7 +60,7 @@
 									<a href="Web-Llaveros/eevee.html">
 										<h2>Eevee</h2>
 										<div class="content">
-											<p></p>
+											<p>Animation WIP</p>
 										</div>
 									</a>
 								</article>
@@ -170,7 +170,7 @@
 									<a href="Web-Llaveros/keroro.html">
 										<h2>Keroro</h2>
 										<div class="content">
-											<p></p>
+											<p>Animation WIP</p>
 										</div>
 									</a>
 								</article>
@@ -302,7 +302,7 @@
 									<a href="Web-Llaveros/pikachu.html">
 										<h2>Pikachu</h2>
 										<div class="content">
-											<p></p>
+											<p>Animation WIP</p>
 										</div>
 									</a>
 								</article>
@@ -324,7 +324,7 @@
 									<a href="Web-Llaveros/pochita.html">
 										<h2>Pochita</h2>
 										<div class="content">
-											<p></p>
+											<p>Animation WIP</p>
 										</div>
 									</a>
 								</article>
@@ -401,7 +401,7 @@
 									<a href="Web-Llaveros/spiderman.html">
 										<h2>Spiderman</h2>
 										<div class="content">
-											<p></p>
+											<p>Animation WIP</p>
 										</div>
 									</a>
 								</article>						
